--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                 <div class="feels-like-temp">39ºC</div>
             </div>
         </div>
+        <div class="extra-info-wrapper">
+            <div class="humidity-wrap">
+                <div class="humidity-text"><span class="material-icons humidity-logo" style="color:whitesmoke; font-size: 60px;">kitesurfing</span>HUMIDITY</div>
+                <div class="humidity">78%</div>
+            </div>
+                <div class="time" style="color: tomato;">22:30</div>
+            <div class="pressure-wrap">
+                <div class="pressure-text"><span class="material-icons pressure-logo" style="color:whitesmoke; font-size: 60px;">speed</span>PRESSURE</div>
+                <div class="pressure" style="color:#B5EAD7;">1006 hPa</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
